Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6071

LBUG during mkdir -i 1 from 2.6.0 client to 2.5.3 server

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.7.0
    • Lustre 2.6.0, Lustre 2.5.3
    • 3
    • 16896

       kernel:LustreError: 3652:0:(mdt_handler.c:2706:mdt_object_lock0()) ASSERTION( !(ibits & (MDS_INODELOCK_UPDATE | MDS_INODELOCK_PERM)) ) failed: lustre-MDT0001: wrong bit 0x2 for remote obj [0x200000007:0x1:0x0]
       kernel:LustreError: 3652:0:(mdt_handler.c:2706:mdt_object_lock0()) LBUG
      

      To reproduce the issue two-node cluster is enough.

      On server:

      #MDSCOUNT=3 lustre/tests/llmount.sh
      #lctl set_param mdt.*.enable_remote_dir=1
      #lctl set_param mdt.*.enable_remote_dir_gid=1122
      

      Client

      #mount -t lustre 172.16.157.136@tcp0:/lustre /mnt/lustre
      #lustre/utils/lfs mkdir -i 1 /mnt/lustre/mdt1
      

      Server is failed with LBUG above.

            di.wang Di Wang (Inactive)
            artem_blagodarenko Artem Blagodarenko (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: